// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="search.form.types.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-circle"
        />
         
        <FormattedMessage
          id="group-admin-add-members"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-upload"
        />
         
        <FormattedMessage
          id="group-admin-add-members-via-file"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
    <AlertForm
      invalid={false}
      submitFailed={false}
      submitSucceeded={true}
      submitting={false}
      valid={true}
    />
    <Connect(injectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(injectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "$fragmentRefs": null,
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="search.form.types.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-circle"
        />
         
        <FormattedMessage
          id="group-admin-add-members"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-upload"
        />
         
        <FormattedMessage
          id="group-admin-add-members-via-file"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
    <div
      className="d-ib"
    >
      <AlertFormSucceededMessage />
    </div>
    <Connect(injectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(injectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "$fragmentRefs": null,
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="search.form.types.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-circle"
        />
         
        <FormattedMessage
          id="group-admin-add-members"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-upload"
        />
         
        <FormattedMessage
          id="group-admin-add-members-via-file"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
    <AlertForm
      invalid={false}
      submitFailed={true}
      submitSucceeded={false}
      submitting={false}
      valid={false}
    />
    <Connect(injectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(injectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "$fragmentRefs": null,
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="search.form.types.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-plus-circle"
        />
         
        <FormattedMessage
          id="group-admin-add-members"
          values={Object {}}
        />
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="fa fa-upload"
        />
         
        <FormattedMessage
          id="group-admin-add-members-via-file"
          values={Object {}}
        />
      </Button>
    </ButtonToolbar>
    <AlertForm
      invalid={false}
      submitFailed={true}
      submitSucceeded={false}
      submitting={false}
      valid={false}
    />
    <Connect(injectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(injectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "$refType": null,
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "id": "id1",
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "3",
              "hasNextPage": true,
              "hasPreviousPage": false,
              "startCursor": "1",
            },
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "$fragmentRefs": null,
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;
